--- a/views/partials/testSpace.ejs
+++ b/views/partials/testSpace.ejs
@@ -2,8 +2,8 @@
 	<div id="message_container" onload="">
 	
 	<div class="message">
-	<b>Shayne&#128515:</b>
-	  Hey
+	<b>ChatRoom&#128515:</b>
+	  Hey there! This is your <b> <%= room_name %> </b> room.
 	</div>
 	
 	</div>
